# CV_application

My_programming_courses/150+ Exercises - Object Oriented Programming in Python - OOP/: README.md  task1.py  task10.py  task100.py  task101.py  task102.py  task103.py  task104.py  task105.py  task106.py  task107.py  task108.py  task109.py  task11.py  task110.py  task111.py  task112.py  task113.py  task114.py  task115.py  task116.py  task117.py  task118.py  task119.py  task12.py  task120.py  task121.py  task122.py  task123.py  task124.py  task125.py  task126.py  task127.py  task128.py  task129.py  task13.py  task130.py  task131.py  task132.py  task133.py  (+120 more)
My_programming_courses/Hackerrank_tasks/: README.md  zadania_hacerrank.ipynb
My_programming_courses/My_projects/: README.md
My_programming_courses/UDEMY_Python_course/: Finalna Lista.txt  README.md  credentials.py  generating_functions.ipynb  imionanazwiska.txt  sample.json
My_programming_courses/flask/: README.md
My_programming_projects/Hackerrank_tasks/: README.md
My_programming_projects/UDEMY_Python_course/: JSON.ipynb  README.md  czytanie_innych_plikow.ipynb  imiona.txt  lista_stron.txt  nazwiska.txt  oceany.txt  publiczne API.ipynb  tekst.txt  zadania_udemy.ipynb  zadanie.txt
My_projects/: README.md
My_projects/Macao game/: bot.py  cards.py  deck.py  game.py  human.py  player.py  simplified_game.py  test.py
My_projects/Snake/: game.py  main.py
semester 3/Advanced Object-oriented Programming/: README.md
semester 3/Advanced Object-oriented Programming/Sieci/NetSim-cpp/: CMakeLists.txt  main.cpp
semester 3/Advanced Object-oriented Programming/Sieci/NetSim-cpp/include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
semester 3/Advanced Object-oriented Programming/Sieci/NetSim-cpp/src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
semester 3/Digital Signal Processing/: README.md
semester 3/Modeling of Dynamic Systems/: README.md
semester 3/Numerical Methods/: README.md
(+923 files in other folders)
